[gd_scene load_steps=4 format=3 uid="uid://jvcltwj75qx0"]

[ext_resource type="Script" path="res://UI/Menus/Settings/settings_tab_container.gd" id="1_52lib"]
[ext_resource type="FontFile" uid="uid://hisxnsk1olxb" path="res://Art/Fonts/m3x6.ttf" id="1_v7i25"]

[sub_resource type="Theme" id="Theme_rtlok"]
default_font = ExtResource("1_v7i25")
default_font_size = 32

[node name="SettingsTabContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_52lib")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/side_margin = 180

[node name="Controls" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Controls/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_right = 160

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Walk Left"

[node name="left" type="Button" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_rtlok")
text = "a"

[node name="MarginContainer2" type="MarginContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_right = 160

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "Walk Right"

[node name="right" type="Button" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_rtlok")
text = "d"

[node name="MarginContainer3" type="MarginContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_right = 160

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
text = "Jump"

[node name="jump" type="Button" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_rtlok")
text = "Spacebar"

[node name="MarginContainer4" type="MarginContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_right = 160

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
text = "Shoot Weapon"

[node name="shoot" type="Button" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_rtlok")
text = "LMB"

[node name="MarginContainer5" type="MarginContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_right = 160

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer5"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer5/HBoxContainer"]
layout_mode = 2
text = "Weapon 1"

[node name="selectRocketLauncher" type="Button" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer5/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_rtlok")
text = "1"

[node name="MarginContainer6" type="MarginContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_right = 160

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer6"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer6/HBoxContainer"]
layout_mode = 2
text = "Weapon 2"

[node name="selectGrenadeLauncher" type="Button" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer6/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_rtlok")
text = "2"

[node name="MarginContainer7" type="MarginContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_right = 160

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer7"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer7/HBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Restart" type="Button" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer7/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_rtlok")
text = "R"

[node name="InputPopUp" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -20.0
offset_right = 120.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="InputPopUp"]
layout_mode = 2
text = "Press any key or mouse button"
